--- a/.github/workflows/MultipleEnvironment.yml
+++ b/.github/workflows/MultipleEnvironment.yml
@@ -8,10 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-       node-version: [16,18,20]
+        node-version: [16, 18, 20]
     steps:
-      - uses: action/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: node -v    
+      - name: Print Node.js version
+        run: node -v  
       
