--- a/.github/workflows/MySecret.yml
+++ b/.github/workflows/MySecret.yml
@@ -1,15 +1,14 @@
 name: Secret Demo Workflow
-
-on: 
+on:
  push:
    branches:
-     - main
+    - main
 jobs:
   secret-demo:
     runs-on: ubuntu-latest
     steps:
      - name: checkout code
-       uses: action/checkout@v4
+       uses: actions/checkout@v4
      - name: Access secret
        run: echo "Secret is $My_SECRET"
        env:
