--- a/.github/workflows/MySecret.yml
+++ b/.github/workflows/MySecret.yml
@@ -3,6 +3,7 @@ on:
  push:
    paths:
       - "mySecret.yml"
+      - 'scripts/mysecret.sh'
    branches:
     - main
 jobs:
@@ -12,6 +13,6 @@ jobs:
      - name: checkout code
        uses: actions/checkout@v4
      - name: Access secret
-       run: echo "Secret is $My_SECRET"
+       run: echo "Secret is $MY_SECRET"
        env:
          MY_SECRET: ${{ secrets.MY_SECRET }}
