--- a/.github/workflows/MySecret.yml
+++ b/.github/workflows/MySecret.yml
@@ -1,18 +1,17 @@
 name: Secret Demo Workflow
 on:
- push:
-   paths:
-      - "mySecret.yml"
-      - 'scripts/mysecret.sh'
-   branches:
-    - main
+  push:
+    paths:
+      - ".github/workflows/mySecret.yml"
+    branches:
+      - main
 jobs:
   secret-demo:
     runs-on: ubuntu-latest
     steps:
-     - name: checkout code
-       uses: actions/checkout@v4
-     - name: Access secret
-       run: echo "Secret is $MY_SECRET"
-       env:
-         MY_SECRET: ${{ secrets.MY_SECRET }}
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Access secret
+        run: echo "Secret is $MY_SECRET"
+        env:
+          MY_SECRET: ${{ secrets.MY_SECRET }}
