--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -6,78 +6,25 @@ on:
       - main
 
 jobs:
-  # CI stage
   build-test:
     name: Build & Test
-    runs-on: ubuntu-latest
-    steps:
-      # 1. Checkout code
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      # 2. Setup Node.js environment
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-
-      # 3. Install dependencies
-      - name: Install Dependencies
-        run: npm install
-
-      # 4. Run Tests
-      - name: Run Tests
-        run: npm test
-
-  # Build and push Docker image to ECR
-  docker-build-push:
-    name: Build & Push Docker Image
-    needs: build-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Configure AWS credentials
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          node-version: '20'
 
-      # Login to ECR
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+      - name: Проверка содержимого папки app
+        run: ls -la app
 
-      # Build and tag Docker image
-      - name: Build Docker Image
-        run: |
-          IMAGE_TAG=latest
-          docker build -t myapp:$IMAGE_TAG .
-          docker tag myapp:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/myapp:$IMAGE_TAG
+      - name: Install Dependencies
+        run: npm install
+        working-directory: app
 
-      # Push image to ECR
-      - name: Push Docker Image
-        run: |
-          docker push ${{ steps.login-ecr.outputs.registry }}/myapp:latest
-
-  # Deploy to EC2
-  deploy:
-    name: Deploy to EC2
-    needs: docker-build-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            REGISTRY=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
-            REPO_NAME=myapp
-            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $REGISTRY
-            docker pull $REGISTRY/$REPO_NAME:latest
-            docker stop myapp || true
-            docker rm myapp || true
-            docker run -d --name myapp -p 80:80 $REGISTRY/$REPO_NAME:latest
+      - name: Run Tests
+        run: npm test
+        working-directory: app
